# OpenSCP079

./: .env.example  .gitignore  CLAUDE.md  CONTENT_LICENSE.md  NOTICE.md  README.md  README.zh-CN.md  app.py  install.sh  pyproject.toml  requirements.txt  run.sh  run079.sh
.codex-fleet/: astrbot-gateway-notes.md  prompt-webui-fable.md
assets/: banner.html
cards/: LunaMoth.en.json  LunaMoth.zh.json  Quinn.en.json  Quinn.zh.json
characters/: LICENSE-CC-BY-SA-3.0.md  LunaMoth.en.json  LunaMoth.zh.json  SCP-079.en.json  SCP-079.zh.json
docs/: OPEN-WORK.md  handover-orchestrator.md  refactor-plan.md
prompts/: default_persona_en.md  default_persona_zh.md  tools_en.md  tools_zh.md
sandbox/: containment_status.json
scp079/: agent.py  cleanup.py  control.py  llm.py  persona.py  settings.py  terminal.py  themes.py  toolpacks.py  tools.py  tui.py  ui.py
tests/: test_agent_neutral.py  test_cards.py  test_chara_knobs.py  test_compaction.py  test_context.py  test_daemon.py  test_desktop_hub.py  test_gateway_boundary.py  test_goals.py  test_hub_webrpc.py  test_living.py  test_memory.py  test_messaging.py  test_messaging_host.py  test_obs.py  test_panel.py  test_presence.py  test_protocol.py  test_pty.py  test_retry.py  test_rules.py  test_runner.py  test_sandbox.py  test_server.py  test_sessions.py  test_skills_mcp.py  test_stall.py  test_supervisor.py  test_terminal_smoke.py  test_tool_guardrails.py  test_transcript.py
themes/: scp-079.json  seraphina.json
toolpacks/: sandbox.json
worlds/: LICENSE-CC-BY-SA-3.0.md  LunaMoth.en.json  LunaMoth.zh.json  (+2 more)
(+79 files in other folders)
