[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunamoss"
version = "0.1.0"
description = "LunaMoss: a local-first agentic character tavern."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "gradio>=5.0,<6",
  "requests>=2.32",
  "textual>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
